--- a/Dairy_Care_System/templates/adminproductstock.html
+++ b/Dairy_Care_System/templates/adminproductstock.html
@@ -115,10 +115,10 @@
         h1 {
             text-align: center;
             color: #000000;
-            font-size: 35px;
+            font-size: 50px;
             font-weight: bold;
             margin-top: 20px;
-            font-family: 'Trebuchet MS', sans-serif;
+            font-family: Copperplate, Papyrus, fantasy;
             text-shadow: 2px 2px 5px rgba(74, 72, 72, 0.1);
         }
 
@@ -183,7 +183,7 @@
 <a href="{% url 'adminpage' %}" class="back-link"><b>&larr; BACK</b></a>
 <br>
 
-    <h1><u><strong>Stock Details</strong></u></h1><br>
+    <h1><strong>Stock Details</strong></h1>
     <div class="table-container">
     <table>
         <thead>
