--- a/Dairy_Care_System/templates/changepassword.html
+++ b/Dairy_Care_System/templates/changepassword.html
@@ -16,35 +16,6 @@
             height: 100vh;
             margin: 0;
         }
-
-        .form-group {
-            position: relative;
-            margin-bottom: 5px;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            padding-right: 35px;
-            box-sizing: border-box;
-        }
-
-        .password-input-wrapper {
-            position: relative;
-        }
-
-        .toggle-password {
-            position: absolute;
-            right: 10px;
-            top: 35%;
-            transform: translateY(-50%);
-            cursor: pointer;
-            color: #888;
-        }
-
-        .toggle-password:hover {
-            color: #333;
-        }
     </style>
     <!-- Add Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -56,6 +27,7 @@
 <body>
     <!-- Navigation Bar -->
     <ul>
+        <div class="brand-name"><i class="fas fa-cow"></i><span>Dairy Care System</span></div>
         <div class="header">
             <div class="nav-item">
                 <li>
@@ -71,12 +43,12 @@
 
     <div class="container">
         <!-- <a href="{% url 'userprofile' %}" class="back-link">&larr; BACK</a> -->
-        <h2>Reset Password</h2><br>
-        <p>Please enter your new password below.</p><br>
+        <h2>Reset Password</h2>
+        <p>Please enter your new password below.</p><br><br>
         <form id="resetPasswordForm" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="new_password">New Password:</label>
+                <label for="new_password"><b>New Password:</b></label>
                 <div class="password-input-wrapper">
                     <input type="password" id="new_password" name="new_password" placeholder="Enter your new password">
                     <i class="fas fa-eye toggle-password" id="toggleNewPassword"></i>
@@ -85,7 +57,7 @@
             </div>
 
             <div class="form-group">
-                <label for="confirm_password">Confirm Password:</label>
+                <label for="confirm_password"><b>Confirm Password:</b></label>
                 <div class="password-input-wrapper">
                     <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm your new password">
                     <i class="fas fa-eye toggle-password" id="toggleConfirmPassword"></i>
