--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <title>Employee Page</title>
+    <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
     <style>
         body {
@@ -21,33 +22,32 @@
 <body>
     
     <!-- Side Navigation -->
-    <div id="mySidenav" class="sidenav">
-        <a href="#">Dairy Care System</a><br><br><br>
-        <a href="#"><i class="fas fa-shopping-basket"></i> Deliver Details</a><br>
+    <div id="mySidenav" class="sidenav"><br><br><br><br>
+        <a href="{% url 'deliveryboyassigns' %}"><i class="fas fa-truck"></i> Your Deliveries</a><br>
+        <a href="#"><i class="fas fa-shopping-basket"></i> Delivery Details</a><br>
         <a href="#"><i class="fas fa-shopping-basket"></i> Feedback Review</a><br>
-        <a href="{% url 'productslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a><br>
-        <a href="{% url 'animalslist' %}"><i class="fa fa-paw"></i> Animals List</a><br>
-        <a href="stocknotification"><i class="fas fa-bell"></i>  Notifications</a><br>
+        <a href="#"><i class="fas fa-shopping-basket"></i> Products List</a><br>
+        <a href="#"><i class="fas fa-bell"></i>  Notifications</a><br>
     </div>
 
-<!-- Navigation Bar -->
-<ul>
-    <div class="header">
-        <div class="nav-item">
-            <li>
-                <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
-                <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
-                    <!-- Change Logout link to trigger a custom SweetAlert -->
-                    <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                </div>
-            </li>
+    <!-- Navigation Bar -->
+    <ul>
+        <div class="brand-name"></i><span>Dairy Care System</span></div>
+        <div class="header">
+            <div class="nav-item">
+                <li>
+                    <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
+                    <div class="dropdown-content" id="dropdown-content">
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <!-- Change Logout link to trigger a custom SweetAlert -->
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    </div>
+                </li>
+            </div>
         </div>
-    </div>
-</ul>
+    </ul><br><br><br><br><br>
 
-
-<center>
+    <center>
     <!-- <h1><b>Employee Dashboard</b></h1> -->
 
     <div class="messages"></div>
@@ -56,57 +56,57 @@
     </div><br><br>
     <div class="quotes">
         The strength of the team is each individual member. The strength of each member is the team.
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
         <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
     </footer>
 
-</center>
+    </center>
 
-<!-- Add SweetAlert2 JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Add SweetAlert2 JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<script>
-    // Toggle dropdown on click
-    function toggleDropdown() {
-        var dropdown = document.getElementById("dropdown-content");
-        if (dropdown.style.display === "block") {
-            dropdown.style.display = "none";
-        } else {
-            dropdown.style.display = "block";
-        }
-    }
-
-    // Close the dropdown if clicked outside of it
-    window.onclick = function(event) {
-        if (!event.target.matches('.username')) {
+    <script>
+        // Toggle dropdown on click
+        function toggleDropdown() {
             var dropdown = document.getElementById("dropdown-content");
             if (dropdown.style.display === "block") {
                 dropdown.style.display = "none";
+            } else {
+                dropdown.style.display = "block";
             }
         }
-    }
 
-    // Custom SweetAlert2 logout confirmation
-    function confirmLogout() {
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You will be logged out of Dairy Care System!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, logout',
-            cancelButtonText: 'Cancel'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                // Redirect to logout URL
-                window.location.href = "{% url 'logout' %}";
+        // Close the dropdown if clicked outside of it
+        window.onclick = function(event) {
+            if (!event.target.matches('.username')) {
+                var dropdown = document.getElementById("dropdown-content");
+                if (dropdown.style.display === "block") {
+                    dropdown.style.display = "none";
+                }
             }
-        });
-    }
-</script>
+        }
+
+        // Custom SweetAlert2 logout confirmation
+        function confirmLogout() {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You will be logged out of Dairy Care System!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, logout',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to logout URL
+                    window.location.href = "{% url 'logout' %}";
+                }
+            });
+        }
+    </script>
 
 </body>
 </html>
