--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -16,9 +16,26 @@ ul {
     align-items: center;
     box-sizing: border-box;
 }
+.brand-name {
+    display: flex;
+    font-family: Copperplate, Papyrus, fantasy;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    padding-left: 20px;
+    gap: 10px;
+}
+
+.brand-name i {
+    color: #4361ee;
+    font-size: 28px;
+}
 
 .header {
-    width: 100%;
+    width: 82%;
+    margin-right: 20px;
+    gap: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -83,6 +100,35 @@ li a:hover {
     display: block;
 }
 
+.form-group {
+    position: relative;
+    margin-bottom: 2px;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    padding-right: 35px;
+    box-sizing: border-box;
+}
+
+.password-input-wrapper {
+    position: relative;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 20px;
+    top: 35%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+}
+
+.toggle-password:hover {
+    color: #333;
+}
+
 .container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -100,7 +146,8 @@ h2 {
 }
 
 label {
-    display: block;
+    display: flex;
+    margin-left: 20px;
     margin-bottom: 10px;
     font-size: 16px;
     color: #333;
