--- a/Dairy_Care_System/dairy/static/css/headsidenav.css
+++ b/Dairy_Care_System/dairy/static/css/headsidenav.css
@@ -13,9 +13,26 @@ ul {
     z-index: 1000;
 }
 
-.header {
-    width: 100%;
+.brand-name {
     display: flex;
+    font-family: Copperplate, Papyrus, fantasy;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    padding-left: 20px;
+    gap: 10px;
+}
+
+.brand-name i {
+    color: #4361ee;
+    font-size: 28px;
+}
+
+.header {
+    width: 79%;
+    display: flex;
+    margin-right: 20px;
     justify-content: flex-end;
     align-items: center;
     padding: 3px 10px;
@@ -81,12 +98,10 @@ li a:hover {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 }
 
-/* .sidenav h3 {
-    color: #ffffff;
-    padding: 8px 8px 15px 20px;
-    font-size: 25px;
-    margin: 0;
-} */
+/* Add margin between icons and text */
+.sidenav a i, .dropdown-content a i {
+    margin-right: 10px; /* Space between icon and text */
+}
 
 /* Remove the open/close functionality */
 #mySidenav {
