--- a/Dairy_Care_System/dairy/static/css/updateuserprofile.css
+++ b/Dairy_Care_System/dairy/static/css/updateuserprofile.css
@@ -20,8 +20,26 @@ ul {
     box-sizing: border-box;
 }
 
+.brand-name {
+    display: flex;
+    font-family: Copperplate, Papyrus, fantasy;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    padding-left: 20px;
+    gap: 10px;
+}
+
+.brand-name i {
+    color: #4361ee;
+    font-size: 28px;
+}
+
 .header {
-    width: 100%;
+    width: 82%;
+    margin-right: 20px;
+    gap: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -163,3 +181,4 @@ input[type="text"], input[type="email"] {
     color: green;
     font-size: 0.875em;
 }
+
