--- a/Dairy_Care_System/templates/adminstocknotification.html
+++ b/Dairy_Care_System/templates/adminstocknotification.html
@@ -49,7 +49,7 @@
         }
 
         .notification-header h2 {
-            color: #2c3e50;
+            color: #000000;
             font-family: Copperplate, Papyrus, fantasy;
             font-size: 40px;
             font-weight: 600;
@@ -58,7 +58,7 @@
             display: inline-block;
         }
 
-        .notification-header h2:after {
+        /* .notification-header h2:after {
             content: '';
             position: absolute;
             bottom: -10px;
@@ -67,7 +67,7 @@
             height: 3px;
             background: linear-gradient(to right, #c3c4c6, #000000);
             border-radius: 2px;
-        }
+        } */
 
         .notification-container {
             max-width: 900px;
@@ -178,9 +178,9 @@
 <body>
     <a href="{% url 'adminpage' %}" class="back-link"><b>&larr; BACK</b></a>
     <div class="notification-wrapper">
-        <div class="notification-header">
+        <div class="notification-header"><br><br><br><br><br><br><br><br>
             <h2>Notifications on Stock Variations</h2>
-        </div><br>
+        </div>
         
         <div class="notification-container">
             <div class="notification-list">
