--- a/Dairy_Care_System/templates/animaldetails.html
+++ b/Dairy_Care_System/templates/animaldetails.html
@@ -4,7 +4,9 @@
 <head>
     <title>{{ animal.animal_name }} Details</title>
     <link rel="stylesheet" href="{% static 'css/animaldetails.css' %}">
+    <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* General reset */
         * {
@@ -14,7 +16,7 @@
         }
 
         body {
-            background: url('{% static "images/animalbackground.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/animaldetails.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: #333;
@@ -213,7 +215,39 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'animalslist' %}" class="back-link">&larr; BACK</a>
+    <!-- <a href="{% url 'animalslist' %}" class="back-link">&larr; BACK</a> -->
+
+    <!-- Side Navigation (Always Visible) -->
+    <div id="mySidenav" class="sidenav"><br><br><br>
+        <a href="{% url 'productslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Products List</a>
+        <a href="{% url 'addproducts' %}" style="padding-left: 45px; font-size: 1.3em;"><i class="fa fa-cart-plus"></i> Add Product</a><br>
+        <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>  Animals List</a>
+        <a href="{% url 'addanimal' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fas fa-plus-circle"></i> Add Animal</a><br>
+        <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
+        <a href="{% url 'preorderfarm' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
+        <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
+        <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
+        <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
+        <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
+    </div>
+
+    <!-- Navigation Bar -->
+    <ul>
+        <div class="brand-name"></i><span>Dairy Care System</span></div>
+        <div class="header">
+            <div class="nav-item">
+                <li>
+                    <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
+                    <div class="dropdown-content" id="dropdown-content">
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </ul><br><br><br><br>
+
+
     <div class="animal-details-container">
         <div class="text-section">
             <h1>{{ animal.animal_name }}</h1>
@@ -227,7 +261,7 @@
                     <a href="animalhealthstatus" class="health-link">
                         <i class="fas fa-heartbeat"></i> Health Status
                     </a>
-                    <a href="#" class="edit-link">
+                    <a href="{% url 'updateanimal' animal_id=animal.animal_id %}" class="edit-link">
                         <i class="fas fa-edit"></i> Edit Details
                     </a>
                 {% if animal.status %}
@@ -293,13 +327,58 @@
             document.getElementById("confirmationModal").style.display = "none";
         }
 
-    // Close modal when clicking outside
-    window.onclick = function(event) {
-        var modal = document.getElementById("confirmationModal");
-        if (event.target == modal) {
-            closeModal();
+        // Close modal when clicking outside
+        window.onclick = function(event) {
+            var modal = document.getElementById("confirmationModal");
+            if (event.target == modal) {
+                closeModal();
+            }
+        }
+    </script>
+
+    <!-- Add SweetAlert2 JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        // Toggle dropdown on click
+    function toggleDropdown() {
+        var dropdown = document.getElementById("dropdown-content");
+        if (dropdown.style.display === "block") {
+            dropdown.style.display = "none";
+        } else {
+            dropdown.style.display = "block";
         }
     }
-</script>
+
+    // Close the dropdown if clicked outside of it
+    window.onclick = function(event) {
+        if (!event.target.matches('.username')) {
+            var dropdown = document.getElementById("dropdown-content");
+            if (dropdown.style.display === "block") {
+                dropdown.style.display = "none";
+            }
+        }
+    }
+
+        // Custom SweetAlert2 logout confirmation
+        function confirmLogout() {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You will be logged out of Dairy Care System!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, logout',
+                cancelButtonText: 'Cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to logout URL
+                    window.location.href = "{% url 'logout' %}";
+                }
+            });
+        }
+    </script>
+
 </body>
 </html>
