--- a/Dairy_Care_System/templates/farmownerpage.html
+++ b/Dairy_Care_System/templates/farmownerpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <style>
         body {
-            background: url('{% static "images/farmownerpg.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/farmownerpage.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
@@ -40,12 +40,12 @@
 <body>
 
     <!-- Side Navigation (Always Visible) -->
-    <div id="mySidenav" class="sidenav">
-        <a href="#">Dairy Care System</a><br><br>
+    <div id="mySidenav" class="sidenav"><br><br><br>
         <a href="{% url 'productslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Products List</a>
-        <a href="{% url 'addproducts' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fa fa-cart-plus"></i> Add Product</a><br>
+        <a href="{% url 'addproducts' %}" style="padding-left: 45px; font-size: 1.3em;"><i class="fa fa-cart-plus"></i> Add Product</a><br>
         <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>  Animals List</a>
         <a href="{% url 'addanimal' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fas fa-plus-circle"></i> Add Animal</a><br>
+        <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
         <a href="{% url 'preorderfarm' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
         <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
         <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
@@ -55,6 +55,7 @@
 
     <!-- Navigation Bar -->
     <ul>
+        <div class="brand-name"><span>Dairy Care System</span></div>
         <div class="header">
             <div class="nav-item">
                 <li>
