--- a/Dairy_Care_System/templates/ordersummary.html
+++ b/Dairy_Care_System/templates/ordersummary.html
@@ -157,7 +157,7 @@
     <button class="download-btn" onclick="window.print()">
         <i class="fas fa-download"></i> Print Receipt
     </button>
-    <br><br>
+    <br>
     <div class="container" id="receipt">
         <div class="header">
             <h1>Receipt</h1><br>
@@ -169,6 +169,7 @@
             <p><strong>Contact:</strong> {{ order.phone }}</p>
             <p><strong>Email:</strong> {{ order.email }}</p>
             <p><strong>Delivery Address:</strong> {{ order.delivery_address }}</p>
+            <p><strong>Pincode:</strong> {{ order.pincode }}</p>
             <p><strong>Payment Method:</strong> {{ payment_method }}</p>
             <p><strong>Order Date:</strong> {{ order.order_date }}</p>
         </div>
