--- a/Dairy_Care_System/templates/preorderfarm.html
+++ b/Dairy_Care_System/templates/preorderfarm.html
@@ -106,12 +106,12 @@
 
 <body>
     <!-- Side Navigation (Always Visible) -->
-    <div id="mySidenav" class="sidenav">
-        <a href="#">Dairy Care System</a><br><br>
+    <div id="mySidenav" class="sidenav"><br><br><br>
         <a href="{% url 'productslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Products List</a>
         <a href="{% url 'addproducts' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fa fa-cart-plus"></i> Add Product</a><br>
         <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>  Animals List</a>
         <a href="{% url 'addanimal' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fas fa-plus-circle"></i> Add Animal</a><br>
+        <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
         <a href="{% url 'milkdetails' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
         <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
         <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
@@ -121,6 +121,7 @@
 
     <!-- Navigation Bar -->
     <ul>
+        <div class="brand-name"></i><span>Dairy Care System</span></div>
         <div class="header">
             <div class="nav-item">
                 <li>
@@ -162,7 +163,7 @@
                         <!-- <td>{{ forloop.counter }}</td> -->
                         <td>
                             <img src="{{ preorder.product.images.first.image.url }}" alt="{{ preorder.product.product_name }}" style="max-width: 100px; max-height: 100px; display: block; margin: 0 auto;"><br>
-                            <a href="{% url 'custproductslist' %}" style="text-decoration: underline; color: #000000;">
+                            <a href="{% url 'productslist' %}" style="text-decoration: underline; color: #000000;">
                                 <b>{{ preorder.product.product_name }}</b></a>          
                         </td>
                         <td>{{ preorder.user.username }}</td>
